@@ -81,12 +81,15 @@ Core and Builtins
 Library
 -------
 
+- Issue #11591: Prevent "import site" from modifying sys.path when python
+  was started with -S.
+
 - Issue #11371: Mark getopt error messages as localizable.  Patch by Filip
   Gruszczyński.
 
 - Issue #11333: Add __slots__ to collections ABCs.
 
-- Issue #11628: cmp_to_key generated class should use __slots__
+- Issue #11628: cmp_to_key generated class should use __slots__.
 
 - Issue #5537: Fix time2isoz() and time2netscape() functions of
   httplib.cookiejar for expiration year greater than 2038 on 32-bit systems.
